--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,35 @@
+version: "3.9"
+
 services:
     app:
-    build:
-        context: .
-        dockerfile: Dockerfile
-    container_name: laravel_app
-    working_dir: /var/www
-    volumes:
-        - ./:/var/www
-    networks:
-        - laravel
-    environment:
-        DB_CONNECTION: mysql
-        DB_HOST: laravel_db
-        DB_PORT: 3306
-        DB_DATABASE: laravel
-        DB_USERNAME: user
-        DB_PASSWORD: password
+        build:
+            context: .
+            dockerfile: Dockerfile
+        container_name: laravel_app
+        working_dir: /var/www
+        volumes:
+            - ./:/var/www
+        networks:
+            - laravel
+        environment:
+            DB_CONNECTION: mysql
+            DB_HOST: laravel_db
+            DB_PORT: 3306
+            DB_DATABASE: laravel
+            DB_USERNAME: user
+            DB_PASSWORD: password
+        depends_on:
+            - db
+        command: >
+            sh -c "
+            until php -r \"new PDO('mysql:host=$DB_HOST;dbname=$DB_DATABASE', '$DB_USERNAME', '$DB_PASSWORD');\"; do
+              echo 'Waiting for MySQL...';
+              sleep 3;
+            done;
+            echo 'MySQL is ready! Running migrations...';
+            php artisan migrate --force --seed;
+            php-fpm
+            "
 
     web:
         image: nginx:alpine
@@ -35,6 +49,7 @@ services:
         container_name: laravel_db
         environment:
             MYSQL_ROOT_PASSWORD: root
+            MYSQL_ROOT_HOST: "%"
             MYSQL_DATABASE: laravel
             MYSQL_USER: user
             MYSQL_PASSWORD: password
@@ -52,7 +67,8 @@ services:
         ports:
             - "8080:80"
         environment:
-            PMA_HOST: laravel_db # Must match MySQL container name
+            PMA_HOST: laravel_db
+            PMA_PORT: 3306
             PMA_USER: user
             PMA_PASSWORD: password
         depends_on:
